# todo

./: .env.example  README.md  docker-compose.yml  index.html  script.js  style.css
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: auth.py  database.py  main.py  models.py  tasks.py  utils.py
mobile/: App.tsx  apiClient.ts
mobile/screens/: Home.tsx
mobile/ui/: theme.ts
mobile/ui/components/: Avatar.tsx  Button.tsx  Card.tsx  IconButton.tsx  Input.tsx  Modal.tsx  Snackbar.tsx  Toggle.tsx  index.ts
mobile/ui/stories/: Button.stories.tsx
tests/: test_auth.py  test_models.py  test_tasks.py  test_utils.py
