[tool.poetry]
name = "ai_calendar_backend"
version = "0.1.0"
description = "Backend for AI-enhanced calendar and task manager"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
uvicorn = "^0.23.0"
psycopg2-binary = "^2.9.7"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
